refactor(scenario): change tags behaviour

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-filters/scenario-filters.component.html
@@ -27,7 +27,7 @@
         formControlName="tags"
       >
         <nb-option
-          *ngFor="let tag of tagsAvailableValues"
+          *ngFor="let tag of tagsCache"
           value="{{ tag }}"
         >
           <span class="initial-capitalize">{{ tag }}</span>
