--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -104,17 +104,18 @@
             id="tags"
             type="text"
             placeholder="Enter tags"
-            (tagAdd)="tagAdd($event)"
-            (keydown.enter)="eventPreventDefault($event)"
             autocomplete="off"
             [nbAutocomplete]="tagsAutocomplete"
+            (tagAdd)="tagAdd($event)"
+            (keydown.enter)="eventPreventDefault($event)"
+            (keyup)="updateTagsAutocompleteValues($event)"
           />
           <nb-autocomplete #tagsAutocomplete>
             <nb-option
               *ngFor="let option of tagsAutocompleteValues | async"
               [value]="option"
             >
-              {{ option }}
+              <span class="initial-capitalize">{{ option }}</span>
             </nb-option>
           </nb-autocomplete>
         </nb-tag-list>
