--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -113,6 +113,7 @@
     [loading]="loading.edit"
     [scenario]="scenarioEdit"
     [scenarios]="scenarios"
+    [categoriesCache]="categoriesCache"
     [tagsCache]="tagsCache"
     (onClose)="closeSidePanel()"
     (onSave)="saveScenario($event)"
