--- a/bot/admin/web/src/app/scenarios/scenario-designer/context-create/context-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/context-create/context-create.component.html
@@ -1,6 +1,6 @@
 <nb-card id="modal-wrapper">
   <nb-card-header class="d-flex justify-content-between align-items-center">
-    <h4>Create context</h4>
+    <h4>Create a new context</h4>
 
     <button
       nbButton
