--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -107,8 +107,7 @@
                   [style.background]="getContextEntityColor(context)"
                   [style.color]="getContextEntityContrast(context)"
                 >
-                  {{ context.entityType }}
-                  {{ context.entityRole }}
+                  {{ qualifiedName(state.user, context.entityType, context.entityRole) }}
                 </span>
               </div>
             </div>
