--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.scss
@@ -47,10 +47,10 @@
 
       .entity {
         border-radius: 0.45rem;
-        padding: 0.3rem 0.5rem;
+        padding: 0rem 0.3rem 0rem 0.3rem;
         font-size: 0.7rem;
         display: inline-block;
-        line-height: 1.2;
+        line-height: 1.25rem;
       }
     }
 
