--- a/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/intent-edit.component.html
@@ -14,126 +14,104 @@
   </nb-card-header>
 
   <nb-card-body>
-    <div>
-      <label class="font-weight-bold">Status :</label>
-      <span *ngIf="item.intentDefinition.intentId">
-        Already exists. Will be reassigned upon publication.
-      </span>
-      <span *ngIf="!item.intentDefinition.intentId">
-        Does not exist. Will be created upon publishing.
-      </span>
-    </div>
-    <div *ngIf="item.intentDefinition.intentId">
-      <label class="font-weight-bold">Id :</label>
-      <span>
-        {{ item.intentDefinition.intentId }}
-      </span>
-    </div>
-    <div>
-      <label class="font-weight-bold">Name :</label>
-      <span>
-        {{ item.intentDefinition.name }}
-      </span>
-    </div>
-    <div *ngIf="item.intentDefinition.label">
-      <label class="font-weight-bold">Label :</label>
-      <span>
-        {{ item.intentDefinition.label }}
-      </span>
-    </div>
+    <div class="row">
+      <div class="col-12">
+        <label class="font-weight-bold">Status :</label>
+        <span *ngIf="item.intentDefinition.intentId">
+          Already exists. Will be reassigned upon publication.
+        </span>
+        <span *ngIf="!item.intentDefinition.intentId">
+          Does not exist. Will be created upon publishing.
+        </span>
+      </div>
+      <div
+        *ngIf="item.intentDefinition.intentId"
+        class="col-12"
+      >
+        <label class="font-weight-bold">Id :</label>
+        <span>
+          {{ item.intentDefinition.intentId }}
+        </span>
+      </div>
+      <div class="col-md-4">
+        <label class="font-weight-bold">Name :</label>
+        <span>
+          {{ item.intentDefinition.name }}
+        </span>
+      </div>
+      <div
+        *ngIf="item.intentDefinition.label"
+        class="col-md-4"
+      >
+        <label class="font-weight-bold">Label :</label>
+        <span>
+          {{ item.intentDefinition.label }}
+        </span>
+      </div>
+      <div
+        *ngIf="item.intentDefinition.category"
+        class="col-md-4"
+      >
+        <label class="font-weight-bold">Category :</label>
+        <span>
+          {{ item.intentDefinition.category }}
+        </span>
+      </div>
 
-    <div *ngIf="item.intentDefinition.description">
-      <label class="font-weight-bold">Description :</label>
-      <span>
-        {{ item.intentDefinition.description }}
-      </span>
-    </div>
-    <div *ngIf="item.intentDefinition.category">
-      <label class="font-weight-bold">Category :</label>
-      <span>
-        {{ item.intentDefinition.category }}
-      </span>
+      <div
+        *ngIf="item.intentDefinition.description"
+        class="col-12"
+      >
+        <label class="font-weight-bold">Description :</label>
+        <span>
+          {{ item.intentDefinition.description }}
+        </span>
+      </div>
     </div>
 
     <hr class="my-2" />
 
     <strong> Questions matching this Intent :</strong>
     <div class="questions">
-      <ul>
-        <li
+      <nb-list>
+        <nb-list-item
           *ngFor="let sentence of sentences.value"
-          class="d-flex justify-content-between align-items-start"
-          (mouseup)="textSelected(sentence)"
+          class="p-0 d-flex justify-content-between align-items-start"
         >
-          <div>
-            <span
-              *ngFor="let token of sentence._tokens"
-              [ngClass]="{ token: token.entity, 'cursor-default': !token.entity }"
-              [title]="'Entity : ' + token.entity?.role"
-              [style.background]="token.color()"
-              [style.color]="getContrastYIQ(token.color())"
-              [nbContextMenu]="contextItems"
-              nbContextMenuTag="contextsMenu"
-              nbContextMenuTrigger="noop"
-              (click)="displayContextsMenu($event, token)"
-              >{{ token.text }}</span
-            >
-
-            <div
-              *ngIf="txtSelectionSentence === sentence"
-              class="my-3"
-            >
-              <span
-                *ngFor="let entity of collectAllEntities()"
-                class="entity mt-2 mr-2 pointer"
-                [style.background]="entity.entityColor"
-                [style.color]="getContrastYIQ(entity.entityColor)"
-                (click)="addEntityToSentence(entity)"
-              >
-                {{ qualifiedName(state.user, entity.entityTypeName, entity.role) }}
-              </span>
-            </div>
-          </div>
+          <scenario-sentence-edit
+            [sentence]="sentence"
+            [contexts]="contexts"
+            [contextsEntities]="contextsEntities"
+            [allEntities]="entitiesCache"
+            (componentActivated)="componentActivated($event)"
+            (entityAdded)="entityAdded()"
+          ></scenario-sentence-edit>
 
           <nb-icon
             icon="trash-2-outline"
             status="danger"
             (click)="removeSentence(sentence)"
-            class="pointer ml-2 min-width-1em"
+            class="pointer mx-2 mt-2 min-width-1em"
             nbTooltip="Remove this formulation"
           ></nb-icon>
-        </li>
-      </ul>
+        </nb-list-item>
+      </nb-list>
 
-      <ul>
-        <li
+      <nb-list>
+        <nb-list-item
           *ngFor="let sentence of _sentences"
-          class="d-flex justify-content-between align-items-start"
+          class="p-0 d-flex justify-content-between text-muted"
         >
-          <div class="text-muted">
-            <span
-              *ngFor="let token of sentence._tokens"
-              [ngClass]="{ token: token.entity, 'cursor-default': !token.entity }"
-              [nbTooltip]="getTokenTooltip(token)"
-              [nbTooltipDisabled]="!token.entity"
-              [style.background]="token.color()"
-              [style.color]="getContrastYIQ(token.color())"
-              ><span
-                [nbContextMenu]="contextItems"
-                nbContextMenuTag="contextsMenu"
-                nbContextMenuTrigger="noop"
-                (click)="displayContextsMenu($event, token)"
-                >{{ token.text }}</span
-              ><nb-icon
-                icon="attach-outline"
-                class="pointer valign-middle ml-1"
-                *ngIf="getContextOfEntity(token)"
-                (click)="dissociateContextFromEntity(token)"
-              ></nb-icon
-            ></span>
-          </div>
-        </li>
-      </ul>
+          <scenario-sentence-edit
+            [sentence]="sentence"
+            [contexts]="contexts"
+            [contextsEntities]="contextsEntities"
+            [allEntities]="entitiesCache"
+            (componentActivated)="componentActivated($event)"
+            (entityAdded)="entityAdded()"
+          ></scenario-sentence-edit>
+        </nb-list-item>
+      </nb-list>
     </div>
 
     <div class="d-flex mt-2">
