feat(scenario-designer): fixes, tickStory json

--- a/bot/admin/web/src/app/scenarios/scenario-designer/intents-search/intents-search.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intents-search/intents-search.component.html
@@ -36,9 +36,9 @@
     <div *ngIf="!loading">
       <nb-card *ngFor="let intent of groupedIntents">
         <nb-card-header>
-          {{ intent.intent.label }}
-          <span *ngIf="!intent.intent.label">
-            {{ intent.intent.name }}
+          {{ intent.intent?.label }}
+          <span *ngIf="!intent.intent?.label">
+            {{ intent.intent?.name }}
           </span>
 
           <button
