feat(scenario-designer): add new context from entity menu

--- a/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/sentence/sentence-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/sentence/sentence-edit.component.html
@@ -87,5 +87,17 @@
         {{ ctx.name }}
       </div>
     </div>
+
+    <button
+      *ngIf="!getContextOfEntity(token)"
+      type="button"
+      nbButton
+      ghost
+      size="small"
+      class="ml-1 d-block w-100"
+      (click)="addContext(token)"
+    >
+      <nb-icon icon="plus-circle-outline"></nb-icon> Create a context
+    </button>
   </section>
 </ng-template>
