refacto(scenario-designer): scenario conception as a child component

--- a/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.scss
@@ -14,7 +14,7 @@
       margin-right: 10px;
       color: #8f9bb3;
       border-radius: 50%;
-      border-color: #e4e9f2;
+      border-color: #ddd;
       border-style: solid;
       border-width: 1px;
       min-width: 2rem;
@@ -32,6 +32,7 @@
 
     &.passed {
       .label-index {
+        border-color: #274bdb;
         color: #274bdb;
       }
       .label {
@@ -42,7 +43,8 @@
     &.selected {
       .label-index {
         border-color: #274bdb;
-        color: #274bdb;
+        background-color: #274bdb;
+        color: white;
       }
       .label {
         color: #274bdb;
@@ -50,12 +52,31 @@
     }
   }
   .connector {
-    height: 1px;
     margin: 1rem;
+    display: flex;
+    align-items: center;
     flex: auto;
-    background-color: #ddd;
+    .line {
+      height: 1px;
+      background-color: #ddd;
+      flex: auto;
+    }
+    .arrow {
+      display: inline-block;
+      border: solid #ddd;
+      border-width: 0 1px 1px 0;
+      padding: 3px;
+      margin-left: -6px;
+      transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+    }
   }
   .connectorpassed {
-    background-color: #3366ff;
+    .line {
+      background-color: #3366ff;
+    }
+    .arrow {
+      border-color: #3366ff;
+    }
   }
 }
