--- a/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
@@ -17,7 +17,10 @@
 <div
   class="connector"
   [class.connectorpassed]="isStepPassed(SCENARIO_MODE.writing)"
-></div>
+>
+  <div class="line"></div>
+  <div class="arrow"></div>
+</div>
 
 <div
   class="step pointer"
@@ -38,7 +41,10 @@
 <div
   class="connector"
   [class.connectorpassed]="isStepPassed(SCENARIO_MODE.casting)"
-></div>
+>
+  <div class="line"></div>
+  <div class="arrow"></div>
+</div>
 
 <div
   class="step pointer"
@@ -59,7 +65,10 @@
 <div
   class="connector"
   [class.connectorpassed]="isStepPassed(SCENARIO_MODE.production)"
-></div>
+>
+  <div class="line"></div>
+  <div class="arrow"></div>
+</div>
 
 <div
   class="step pointer"
