--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -46,6 +46,16 @@
   [scenario]="scenario"
 ></scenario-conception>
 
+<scenario-production
+  *ngIf="scenario.mode === SCENARIO_MODE.production"
+  [scenario]="scenario"
+></scenario-production>
+
+<scenario-publishing
+  *ngIf="scenario.mode === SCENARIO_MODE.publishing"
+  [scenario]="scenario"
+></scenario-publishing>
+
 <ng-template
   #tickStoryJsonTempModal
   let-data
