feat(scenario-designer): state machine editor

--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -28,8 +28,6 @@
   min-width: 1em;
 }
 
-.nbStepper-without-content {
-  .step-content {
-    display: none;
-  }
+.unselectable {
+  user-select: none;
 }
