--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
@@ -1,1 +1,95 @@
-HELLO PRODUCTION
+<div class="production-wrapper d-flex align-items-stretch">
+  <div class="production-menu p-3">
+    <div class="intents-wrapper">
+      <strong>Intents</strong>
+      <div class="intents-list mt-2">
+        <div
+          class="intent my-1 unselectable"
+          *ngFor="let intent of getScenarioIntents()"
+          [ngClass]="{ disabled: isIntentInUse(intent) }"
+          [nbTooltip]="getIntentTooltip(intent)"
+          [dndDraggable]="{ type: 'intent', name: intent.name }"
+          dndHandle
+          dndType="intent"
+          [dndDisableIf]="isIntentInUse(intent)"
+        >
+          <div class="ellipsis">{{ intent.name }}</div>
+        </div>
+      </div>
+    </div>
+
+    <hr class="menu-separator mb-2" />
+
+    <div class="actions-wrapper">
+      <strong>Actions</strong>
+      <div class="actions-list mt-2">
+        <div
+          class="action p-2 my-1 unselectable"
+          *ngFor="let action of getScenarioActions()"
+          [ngClass]="{ disabled: isActionInUse(action) }"
+          [nbTooltip]="getActionTooltip(action)"
+          [dndDraggable]="{ type: 'action', name: action.name }"
+          dndHandle
+          dndType="action"
+          [dndDisableIf]="isActionInUse(action)"
+        >
+          <div class="ellipsis">{{ action.name }}</div>
+        </div>
+      </div>
+    </div>
+
+    <hr class="menu-separator mb-2" />
+
+    <button
+      (click)="displayStateMachineCode()"
+      fullWidth
+      nbButton
+      size="tiny"
+      status="primary"
+      class="mt-1"
+    >
+      Display state machine code
+    </button>
+    <button
+      (click)="resetStateMachine()"
+      fullWidth
+      nbButton
+      size="tiny"
+      status="warning"
+      class="mt-1"
+    >
+      Reset state machine
+    </button>
+  </div>
+
+  <div
+    class="production-canvas-wrapper flex-fill"
+    #canvasWrapperElem
+    appMouseWheelListner
+    (onMouseWheel)="mouseWheel($event)"
+    (mousedown)="onMouseDownCanvas($event)"
+    (mouseup)="onMouseUpCanvas($event)"
+    (mousemove)="onMouseMoveCanvas($event)"
+  >
+    <div
+      class="production-canvas"
+      #canvasElem
+    >
+      <scenario-state-group
+        [state]="scenario.data.stateMachine"
+        [usedNames]="collectAllUsedeNames()"
+      ></scenario-state-group>
+    </div>
+  </div>
+</div>
+
+<ng-template
+  #tickStoryJsonTempModal
+  let-data
+>
+  <nb-card id="modal-wrapper">
+    <nb-card-body>
+      <pre style="max-height: 70vh; overflow: auto">{{ data }}</pre>
+    </nb-card-body>
+  </nb-card>
+</ng-template>
