--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
@@ -34,9 +34,9 @@
       class="position-relative"
       [ngStyle]="{ 'width.px': transitionWrapperWidth }"
     >
-      <ng-container *ngFor="let transition of getTransitionsCache()">
+      <ng-container *ngFor="let transition of state.on | keyvalue">
         <scenario-transition
-          [transition]="transition"
+          [transition]="{ name: transition.key, target: transition.value }"
           (removeTransition)="removeTransition($event)"
         ></scenario-transition>
       </ng-container>
@@ -59,8 +59,8 @@
 
     <div>
       <scenario-state-group
-        *ngFor="let state of getStates()"
-        [state]="state"
+        *ngFor="let state of state.states | keyvalue"
+        [state]="state.value"
         [usedNames]="usedNames"
       ></scenario-state-group>
     </div>
