feat(scenario-production): compute top of multiple sibling intents

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
@@ -37,6 +37,7 @@
       <ng-container *ngFor="let transition of state.on | keyvalue">
         <scenario-transition
           [transition]="{ name: transition.key, target: transition.value }"
+          [parentState]="state"
           (removeTransition)="removeTransition($event)"
         ></scenario-transition>
       </ng-container>
