feat(scenario-production): initial state handling

--- a/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/mode-stepper/mode-stepper.component.html
@@ -79,7 +79,7 @@
   (click)="switchMode(SCENARIO_MODE.publishing)"
 >
   <div class="label-index">
-    <nb-icon icon="checkmark-circle-outline"></nb-icon>
+    <nb-icon icon="film-outline"></nb-icon>
   </div>
   <div class="label">
     <span>Publishing</span>
