--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
@@ -2,8 +2,8 @@
   font-size: 0.8rem;
   border: 2px solid #aaa;
   min-width: 10rem;
+  width: fit-content;
 
-  // margin: 20px;
   margin-bottom: 20px;
   border-radius: 0.25rem;
 
