feat(scenario-list-simple): add selected scenario indicator

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -41,6 +41,7 @@
 <nb-accordion
   *ngFor="let scenario of scenarios | orderBy: orderBy:orderByReverse:'name'"
   class="mb-2"
+  [class.selected]="selectedScenario?.id === scenario.id"
 >
   <nb-accordion-item>
     <nb-accordion-item-header>
