feat(app): add selected indicator for accordion component

--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -31,3 +31,10 @@
 .unselectable {
   user-select: none;
 }
+
+nb-accordion.selected {
+  border-left: 0.5rem solid var(--success);
+  nb-accordion-item {
+    padding-left: 1rem;
+  }
+}
