--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
@@ -1,13 +1,15 @@
 <nb-icon
   *ngIf="intent.primary"
   icon="award-outline"
-  class="valign-middle"
-  style="margin-left: -5px"
+  class="valign-middle mr-1"
+  style="margin-left: -5px; width: 1.3em"
 ></nb-icon>
-{{ transition.name }}
+<div class="ellipsis">
+  {{ transition.name }}
+</div>
 
 <nb-icon
-  class="pointer ml-2"
+  class="pointer ml-2 min-width-1em"
   icon="minus-circle-outline"
   nbTooltip="Remove this transition"
   (click)="remove(transition)"
