fix(json-previewer): set a max-height to allow scrolling

--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
@@ -15,7 +15,7 @@
     </div>
   </nb-card-header>
 
-  <nb-card-body>
+  <nb-card-body class="card-body">
     <pre
       [class]="theme"
       [innerHTML]="data"
