feat(scenario-production): transitions targets ids should have a leading hash

--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.scss
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.scss
@@ -7,10 +7,12 @@ pre {
   margin: 0;
 
   &.default span {
-    &.key,
+    &.key {
+      color: #c792cc;
+    }
     &.comma,
     &.delimiter {
-      color: black;
+      color: gray;
     }
 
     &.boolean {
