feat(scenario-production): tooltips on states and transitions based on their actions and intents

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.html
@@ -5,7 +5,10 @@
   dndDragoverClass="dragHover"
   (dndDrop)="onDrop($event)"
 >
-  <div class="stateGroup-header">
+  <div
+    class="stateGroup-header"
+    [nbTooltip]="getActionTooltip()"
+  >
     <span class="text-nowrap">
       <nb-icon
         *ngIf="state.id !== 'root' && isInitialParentState()"
