--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.html
@@ -3,8 +3,12 @@
   icon="award-outline"
   class="valign-middle mr-1"
   style="margin-left: -5px; width: 1.3em"
+  nbTooltip="Primary intent"
 ></nb-icon>
-<div class="ellipsis">
+<div
+  class="ellipsis"
+  [nbTooltip]="getIntentTooltip()"
+>
   {{ transition.name }}
 </div>
 
